include/sentry.h

typedef struct sentry_envelope_s sentry_envelope_t;
typedef struct sentry_options_s sentry_options_t;
typedef struct sentry_transport_s sentry_transport_t;
/**
 * Creates transport with an initial `send_func`.
 */
SENTRY_API sentry_transport_t *sentry_transport_new(
    void (*send_func)(sentry_envelope_t *envelope, void *state));
/**
 * Sets the transport hook to free the transport `state`.
 */
SENTRY_API void sentry_transport_set_free_func(
    sentry_transport_t *transport, void (*free_func)(void *state));
/**
 * Sets the transport startup hook.
 *
 * This hook is called from within `sentry_init` and will get a reference to the
 * options which can be used to initialize transport internal state.
 * It should return `0` on success. A failure will bubble up to `sentry_init`.
 */
SENTRY_API void sentry_transport_set_startup_func(sentry_transport_t *transport,
    int (*startup_func)(const sentry_options_t *options, void *state));
/**
 * Sets the transport flush hook.
 *
 * This hook will receive a millisecond-resolution timeout.
 * It should return `0` if all the pending envelopes are
 * sent within the timeout, or `1` if the timeout is hit.
 */
SENTRY_API void sentry_transport_set_flush_func(sentry_transport_t *transport,
    int (*flush_func)(uint64_t timeout, void *state));
/**
 * Sets the transport shutdown hook.
 *
 * This hook will receive a millisecond-resolution timeout.
 * It should return `0` on success in case all the pending envelopes have been
 * sent within the timeout, or `1` if the timeout was hit.
 */
SENTRY_API void sentry_transport_set_shutdown_func(
    sentry_transport_t *transport,
    int (*shutdown_func)(uint64_t timeout, void *state));
/**
 * Opaque handle to a custom HTTP client instance, as created by a
 * `sentry_http_client_factory_func_t` and passed back into
 * `sentry_http_client_send_func_t` and the client start/shutdown hooks.
 * Purely cosmetic -- it exists to distinguish client pointers from the
 * unrelated `void *factory_data` / user-data pointers used alongside them.
 */
typedef void sentry_http_client_t;
/**
 * Creates a new HTTP client instance for a transport created with
 * `sentry_http_transport_new`. Returns an opaque client pointer, or `NULL`
 * on failure. `factory_data` is the pointer passed to
 * `sentry_http_transport_new`, unchanged and still owned by the caller.
 *
 * sentry-native currently calls this exactly once per transport, on the
 * thread that calls `sentry_http_transport_new`, to create the single
 * client the transport's background thread will use for every request. A
 * future multi-threaded transport may call this once per worker thread
 * instead, each time from that worker thread; implementations should not
 * assume they are called from any particular thread, or exactly once.
 */
typedef sentry_http_client_t *(*sentry_http_client_factory_func_t)(
    void *factory_data);
/**
 * Executes a single HTTP request using `client` (as returned by the
 * transport's `sentry_http_client_factory_func_t`), and fills in `resp` via
 * `sentry_http_response_set_status_code` and
 * `sentry_http_response_set_header`.
 *
 * Returns `1` on success. Returning `0` marks the request as failed for
 * sentry-native's retry/caching logic. A request that fails only because
 * shutdown interrupted it does not need any special handling: sentry-native
 * already knows it is shutting down and classifies the failure accordingly.
 *
 * sentry-native calls this from a single background thread, once per
 * request, in the order requests were queued, and never invokes it again
 * for the same client until the previous call returns. A future
 * multi-threaded transport may drive different client instances from
 * different threads concurrently, but will still only ever call into one
 * client instance from one thread at a time for `send_func` calls
 * specifically.
 *
 * The one exception is `sentry_http_transport_set_client_shutdown_func`'s
 * hook, which sentry-native may call from a different thread while a
 * `send_func` call for the same client is still in flight -- see its
 * documentation.
 */
typedef int (*sentry_http_client_send_func_t)(sentry_http_client_t *client,
    sentry_http_request_t *req, sentry_http_response_t *resp);
/**
 * Creates a new HTTP transport that executes requests through a custom HTTP
 * client, while sentry-native continues to own request preparation and
 * serialization, queueing, envelope ordering, HTTP retry with exponential
 * backoff, offline caching, rate-limit handling, client reports, and
 * flush/shutdown behavior -- the same behavior the built-in curl and
 * WinHTTP transports get, since they are implemented against this same
 * interface.
 *
 * `factory` is called to create the client instance passed to `send_func`
 * and to the optional hook registered with
 * `sentry_http_transport_set_client_start_func` and
 * `sentry_http_transport_set_client_shutdown_func`. `factory_data` is
 * passed through to `factory` unchanged; sentry-native does not take
 * ownership of it.
 *
 * `client_free_func` frees the client created by `factory`. It is used both
 * if transport creation fails after `factory` already produced a client,
 * and later when the returned transport itself is freed. Pass `NULL` if
 * the client owns no resources that need freeing.
 *
 * Returns `NULL` if `factory` or `send_func` is `NULL`, or if the client
 * factory itself fails.
 */
SENTRY_EXPERIMENTAL_API sentry_transport_t *sentry_http_transport_new(
    sentry_http_client_factory_func_t factory, void *factory_data,
    sentry_http_client_send_func_t send_func,
    void (*client_free_func)(sentry_http_client_t *client));
/**
 * Sets the hook that initializes the client once `sentry_options_t` is
 * available, mirroring `sentry_transport_set_startup_func` for the
 * transport itself. Called once, from within `sentry_init`, before the
 * transport's background thread starts sending requests. Should return `0`
 * on success; a non-zero return bubbles up to `sentry_init`.
 */
SENTRY_EXPERIMENTAL_API void sentry_http_transport_set_client_start_func(
    sentry_transport_t *transport,
    int (*start_func)(
        sentry_http_client_t *client, const sentry_options_t *options));
/**
 * Sets the hook that tells the client the transport is shutting down, e.g.
 * to unblock or cancel an in-flight request. Called at most once, when the
 * transport is shut down.
 *
 * This hook runs on the thread that calls `sentry_close`, which is not the
 * background thread that runs `send_func` -- if a `send_func` call is still
 * in flight when shutdown starts, this hook may be invoked concurrently
 * with it, on a different thread, for the same client. The client
 * implementation must be able to tolerate that.
 */
SENTRY_EXPERIMENTAL_API void sentry_http_transport_set_client_shutdown_func(
    sentry_transport_t *transport,
    void (*shutdown_func)(sentry_http_client_t *client));
/**
 * Create a new function transport.
 *
 * It is a convenience function that works with a borrowed `data`, and will
 * automatically free the envelope, so the user-provided function does not need
 * to do that.
 */
SENTRY_DEPRECATED("Use `sentry_transport_new` instead")
SENTRY_API sentry_transport_t *sentry_new_function_transport(
    void (*func)(const sentry_envelope_t *envelope, void *data), void *data);
/**
 * The crash handler strategy.
 */
typedef enum {
    SENTRY_HANDLER_STRATEGY_DEFAULT = 0,
    SENTRY_HANDLER_STRATEGY_CHAIN_AT_START = 1,
} sentry_handler_strategy_t;
/**
 * Creates a new options struct.
 * Can be freed with `sentry_options_free`.
 */
SENTRY_API sentry_options_t *sentry_options_new(void);
/**
 * Function to start a network connection.
 * This is called on a background thread, so it must be thread-safe.
 */
SENTRY_API void sentry_options_set_network_connect_func(
    sentry_options_t *opts, void (*network_connect_func)(void));
/**
 * Enables or disables debug printing mode. To change the log level from the
 * default DEBUG level, use `sentry_options_set_logger_level`.
 */
SENTRY_API void sentry_options_set_debug(sentry_options_t *opts, int debug);
/**
 * Sets the path to the Sentry Database Directory.
 *
 * Sentry will use this path to persist user consent, sessions, and other
 * artifacts in case of a crash. This will also be used by the crashpad backend
 * if it is configured.
 *
 * The directory is used for "cached" data, which needs to persist across
 * application restarts to ensure proper flagging of release-health sessions,
 * but might otherwise be safely purged regularly.
 *
 * It is roughly equivalent to the type of `AppData/Local` on Windows and
 * `XDG_CACHE_HOME` on Linux, and equivalent runtime directories on other
 * platforms.
 *
 * It is recommended that users set an explicit absolute path, depending
 * on their apps runtime directory. The path will be created if it does not
 * exist and will be resolved to an absolute path inside `sentry_init`. The
 * directory should not be shared with other application data/configuration, as
 * sentry-native will list and possibly delete files in that directory. An
 * example might be `$XDG_CACHE_HOME/your-app/sentry`
 *
 * If no explicit path is set, sentry-native will default to `.sentry-native` in
 * the current working directory, with no specific platform-specific handling.
 *
 * `path` is assumed to be in a platform-specific filesystem path encoding.
 * API Users on windows are encouraged to use
 * `sentry_options_set_database_pathw` instead.
 */
SENTRY_API void sentry_options_set_database_path(
    sentry_options_t *opts, const char *path);
/* -- Global/Scope APIs -- */

/**
 * Initializes the Sentry SDK with the specified options.
 *
 * This takes ownership of the options. After the options have been set,
 * they cannot be modified anymore.
 * Depending on the configured transport and backend, this function might not be
 * fully thread-safe.
 * Returns 0 on success.
 */
SENTRY_API int sentry_init(sentry_options_t *options);
/**
 * Sets the handler strategy.
 */
SENTRY_EXPERIMENTAL_API void sentry_options_set_handler_strategy(
    sentry_options_t *opts, sentry_handler_strategy_t handler_strategy);
/**
 * Clear the persisted status of the "crashed-last-run".
 *
 * Notes:
 *   * This doesn't change the value of sentry_get_crashed_last_run() yet.
 *     However, if sentry_init() is called again, the value will change.
 *   * This may only be called after sentry_init() and before sentry_close().
 *
 * Returns 0 on success, 1 on error.
 */
SENTRY_DEPRECATED("The crash marker is cleared by `sentry_init()`.")
SENTRY_EXPERIMENTAL_API int sentry_clear_crashed_last_run(void);